--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,11 @@
 name: Delete test environment
-on: delete
+on: 
+  delete: {}
+  pull_request:
+  types:
+    - opened
+    - reopened
+    - synchronize
 
 jobs:
   test:
