--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,12 @@
 name: Delete test environment
 on: 
   delete: {}
+  deployment: {}
   pull_request:
-  types:
-    - opened
-    - reopened
-    - synchronize
+    types:
+      - opened
+      - reopened
+      - synchronize
 
 jobs:
   test:
