--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,4 +14,5 @@ jobs:
     steps:
       - name: Compute deployment name domain
         run: |
+            echo "REFFF ${GITHUB_REF}"
             echo "${{ toJson(github) }}"
